# coletores-BO

./: .env.example  .gitignore  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  INTERRUPCAO_SEGURA.md  LICENSE  PADRAO_CAPITALIZACAO.md  PRD.md  QUICKSTART.md  README.md  STATUS.md  analysis.json  analyze_results.py  config.yaml  config.yaml.example  exemplo_uso.py  mypy.ini  pyproject.toml  requirements-minimal.txt  requirements-ner.txt  requirements.txt  test_5_categorias.py  test_classificacao.py  test_classificacao_fix.py  test_deduplicacao.py  test_fixes.py  test_fixes_v2.py  test_fixes_v3.py  test_number_initials_discard.py  test_validation_numbers.py  teste_resultado.txt
.claude/: settings.local.json
checkpoints/: analysis_checkpoint_analysis_complete_20250925_112737.txt  analysis_checkpoint_analysis_complete_20250925_112738.txt  analysis_checkpoint_analysis_complete_20250925_112739.txt  analysis_checkpoint_analysis_complete_20250925_112740.txt  analysis_checkpoint_analysis_complete_20250925_112741.txt  analysis_checkpoint_analysis_complete_20250925_112742.txt  analysis_checkpoint_analysis_complete_20250925_112743.txt  analysis_checkpoint_analysis_complete_20250925_112744.txt  analysis_checkpoint_analysis_complete_20250925_112745.txt  analysis_checkpoint_analysis_complete_20250925_112746.txt  analysis_checkpoint_analysis_complete_20250925_112747.txt  analysis_checkpoint_analysis_complete_20250925_112749.txt  analysis_checkpoint_analysis_complete_20250925_112750.txt  analysis_checkpoint_analysis_complete_20250925_112751.txt  analysis_checkpoint_analysis_complete_20250925_112752.txt  analysis_checkpoint_analysis_complete_20250925_112753.txt  analysis_checkpoint_analysis_complete_20250925_112754.txt  analysis_checkpoint_analysis_complete_20250925_112755.txt  analysis_checkpoint_analysis_complete_20250925_112756.txt  analysis_checkpoint_analysis_complete_20250925_112757.txt  analysis_checkpoint_analysis_complete_20250925_112758.txt  analysis_checkpoint_analysis_complete_20250925_112759.txt  analysis_checkpoint_analysis_complete_20250925_112800.txt  analysis_checkpoint_analysis_complete_20250925_112801.txt  analysis_checkpoint_analysis_complete_20250925_112802.txt  analysis_checkpoint_analysis_complete_20250925_112803.txt  analysis_checkpoint_analysis_complete_20250925_112804.txt  analysis_checkpoint_analysis_complete_20250925_112805.txt  analysis_checkpoint_analysis_complete_20250925_112806.txt  analysis_checkpoint_analysis_complete_20250925_112807.txt  analysis_checkpoint_analysis_complete_20250925_112808.txt  analysis_checkpoint_analysis_complete_20250925_112809.txt  analysis_checkpoint_analysis_complete_20250925_112810.txt  analysis_checkpoint_analysis_complete_20250925_112811.txt  analysis_checkpoint_analysis_complete_20250925_112812.txt  (+554 more)
(+250 files in other folders)
